chore: add korean members name

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="meta">
           <span class="chip" data-i18n="kr_chip_location">所在地：光州広域市</span>
           <span class="chip" data-i18n="kr_chip_field">分野：ソフトウェア / 情報</span>
-          <span class="chip" data-i18n="kr_chip_team">参加メンバー：</span>
+          <span class="chip" data-i18n="kr_chip_team">参加メンバー： チョン·ヒョジュ、ソ·ギョンジュ</span>
         </div>
 
         <div class="section">
@@ -181,7 +181,7 @@
       kr_school_name: "光州ソフトウェアマイスター高校",
       kr_chip_location: "所在地：光州広域市",
       kr_chip_field: "分野：ソフトウェア / 情報",
-      kr_chip_team: "参加メンバー：",
+      kr_chip_team: "参加メンバー： チョン·ヒョジュ、ソ·ギョンジュ",
       kr_feature_1: "ソフトウェア分野に特化した専門教育",
       kr_feature_2: "実践的な開発・制作を中心とした学習",
       kr_feature_3: "チーム開発・発表活動の経験を重視",
@@ -232,7 +232,7 @@
       kr_school_name: "Gwangju Software Meister High School",
       kr_chip_location: "Location: Gwangju, Republic of Korea",
       kr_chip_field: "Field: Software / Information Technology",
-      kr_chip_team: "Members:",
+      kr_chip_team: "Members: Hyoju Jung, Kyung-ju Seo",
       kr_feature_1: "Specialized education focused on software",
       kr_feature_2: "Learning centered on practical development and building",
       kr_feature_3: "Emphasis on team development and presentations",
@@ -283,7 +283,7 @@
       kr_school_name: "광주 소프트웨어 마이스터 고등학교",
       kr_chip_location: "지역: 광주광역시",
       kr_chip_field: "분야: 소프트웨어 / 정보",
-      kr_chip_team: "참여 멤버:",
+      kr_chip_team: "참여 멤버: 정효주, 서경주",
       kr_feature_1: "소프트웨어 분야에 특화된 전문 교육",
       kr_feature_2: "실습 중심의 개발·제작 학습",
       kr_feature_3: "팀 개발 및 발표 경험을 중시",
