--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <a class="btn" href="#members" data-i18n="btn_members">メンバー</a>
             <div class="hover-detail">
               <strong data-i18n="tip_members_title">参加者</strong>
-              <p data-i18n="kr_members_names">（メンバー確定後に追記）</p>
+              <p data-i18n="kr_members_names">チョン·ヒョジュ、ソ·ギョンジュ</p>
             </div>
           </div>
         </div>
@@ -187,7 +187,7 @@
       kr_feature_3: "チーム開発・発表活動の経験を重視",
       kr_role_1: "データ収集 / 設計・検証 / 共同発表の準備",
       kr_role_2: "成果物：レポート、分析結果、発表資料",
-      kr_members_names: "（メンバー確定後に追記）",
+      kr_members_names: "チョン·ヒョジュ、ソ·ギョンジュ",
 
       jp_badge: "Japan / 高校概要",
       jp_school_name: "都立科学技術高等学校",
@@ -238,7 +238,7 @@
       kr_feature_3: "Emphasis on team development and presentations",
       kr_role_1: "Data collection / design & validation / joint presentation preparation",
       kr_role_2: "Outputs: report, analysis results, presentation slides",
-      kr_members_names: "(to be added)",
+      kr_members_names: "Hyoju Jung, Kyung-ju Seo",
 
       jp_badge: "Japan / School Overview",
       jp_school_name: "Tokyo Metropolitan Science and Technology High School",
@@ -289,7 +289,7 @@
       kr_feature_3: "팀 개발 및 발표 경험을 중시",
       kr_role_1: "데이터 수집 / 설계·검증 / 공동 발표 준비",
       kr_role_2: "산출물: 보고서, 분석 결과, 발표자료",
-      kr_members_names: "(추후 추가)",
+      kr_members_names: "정효주, 서경주",
 
       jp_badge: "Japan / 학교 개요",
       jp_school_name: "도쿄도립 과학기술 고등학교",
