--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <!-- member -->
     <section id="members" class="below">
       <h2 data-i18n="section_members_title">メンバー（Members）</h2>
-      <p class="below-muted" data-i18n="section_members_text">参加者情報をここに追加します。</p>
+      <p class="below-muted" data-i18n="section_members_text">チョン·ヒョジュ、ソ·ギョンジュ、鈴鹿泰正、島村真央</p>
     </section>
 
     <footer>
@@ -267,7 +267,7 @@
       research_cap2: "Photo: experiment / building / observation",
 
       section_members_title: "Members",
-      section_members_text: "Add participant information here.",
+      section_members_text: "Hyoju Jung, Kyung-ju Seo, Taisei Suzuka, Mao Shimamura",
 
       footer_text: "© Joint Research Project",
       footer_updated: "Last updated: 2025-12-23",
@@ -318,7 +318,7 @@
       research_cap2: "이미지: 실험·제작·관측 모습",
 
       section_members_title: "멤버(Members)",
-      section_members_text: "정효주, 서경주, 스즈카 타이세이, 시마무라 마오.",
+      section_members_text: "정효주, 서경주, 스즈카 타이세이, 시마무라 마오",
 
       footer_text: "© Joint Research Project",
       footer_updated: "Last updated: 2025-12-23",
